add listing of charts + tests
